# Houdini-Package-Manager

./: .gitignore  MainMenuCommon.xml  Package-Manager.json  README.md  package.setup
python2.7libs/: pythonrc.py
python2.7libs/package_manager/: __main__.py  choose_version_dialog.py  core.py  github.py  houdini_license.py  install_local.py  install_local_dialog.py  install_web.py  install_web_dialog.py  link_label.py  local_package.py  local_package_content.py  main_window.py  new_version_dialog.py  package.py  package_content.py  package_list.py  package_status.py  path_text.py  pypanel.py  settings.py  setup_schema.py  shelves.py  update.py  update_dialog.py  update_list.py  update_options.py  version.py  version_dialog.py  web_package.py  web_package_content.py  web_package_list.py
python2.7libs/package_manager/setup_schemas/: MOPS.schema  Redshift.schema  dump_schemas.py  qLib.schema
python2.7libs/package_manager/setup_schemes/: dump_schemes.py
python3.10libs/: pyproject.toml  pythonrc.py  requirements-test.txt
python3.10libs/package_manager/: __init__.py  github.py  houdini_license.py  install_local.py  install_web.py  link_label.py  local_package.py  local_package_content.py  main_window.py  package.py  package_list.py  package_status.py  path_text.py  pypanel.py  settings.py  setup_schema.py  shelves.py  update.py  update_dialog.py  update_list.py  update_options.py  version.py  version_test.py  web_package.py  web_package_content.py  web_package_list.py
python3.10libs/package_manager/setup_schemas/: Redshift.schema  SideFX_Labs.schema  dump_schemas.py
